General housekeeping
- use records where applicable
- remove unnecessary casts
- in streams, use ".toList()" instead of ".collect(Collectors.toList())"
- Remove explicit type parameters where the type can be inferred
- use lambdas instead of anonymous interface implementations where possible
- Use method references instead of lambdas where applicable